collapse tall posts & tags, fix timestamps, and fix some layout issues

--- a/db/static/base.css
+++ b/db/static/base.css
@@ -1181,6 +1181,7 @@ body {
     > .page-contents {
         order: 3;
         margin-bottom: 4rem;
+        min-width: 0;
     }
 
     > .i-large-nav-spacer {
@@ -1275,6 +1276,7 @@ body {
 
             > .i-handle {
                 margin-top: 0.5rem;
+                overflow-wrap: anywhere;
             }
         }
     }
@@ -1534,6 +1536,56 @@ body {
         > .i-state {
             padding-left: 0.75rem;
             padding-right: 0.75rem;
+        }
+    }
+}
+
+@media (max-width: 479px) {
+    /* fix bad overflow */
+    .project-profile-filters {
+        padding-left: 0.75rem;
+        padding-right: 0.75rem;
+        gap: 0.75rem;
+
+        > .i-filter {
+            position: relative;
+            white-space: nowrap;
+            min-width: 0;
+
+            > .i-state {
+                white-space: nowrap;
+            }
+
+            > .i-state > .i-state {
+                display: none;
+            }
+
+            &[data-state="true"] > .i-state:last-child {
+                background: rgb(var(--color-foreground-700));
+            }
+
+            &[data-state="false"] > .i-state:last-child,
+            &[data-state="true"] > .i-state:first-child {
+                /* hack: overlay the deactivated one so it toggles */
+                position: absolute;
+                opacity: 0;
+                inset: 0;
+            }
+
+            > .i-state::after {
+                content: '';
+                display: inline-block;
+                vertical-align: middle;
+                width: 1rem;
+                height: 1rem;
+                background: currentColor;
+                mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" /></svg>');
+                mask-size: contain;
+            }
+
+            &[data-state="false"] > .i-state::after {
+                mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" /></svg>');
+            }
         }
     }
 }
@@ -2011,6 +2063,22 @@ body {
             overflow-wrap: break-word;
             overflow: hidden;
         }
+
+        .i-read-more,
+        .i-read-less {
+            display: inline-block;
+            text-align: left;
+            font-size: 0.875rem;
+            line-height: 1.25rem;
+            padding-left: 0.75rem;
+            padding-bottom: 0.75rem;
+            font-weight: bold;
+            cursor: pointer;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
     }
 
     > .i-expandable {
@@ -2028,20 +2096,31 @@ body {
                 display: block;
             }
         }
+    }
 
-        > .i-post-body > .i-read-more,
-        > .i-post-body > .i-read-less {
-            display: inline-block;
-            text-align: left;
-            font-size: 0.875rem;
-            line-height: 1.25rem;
-            padding-left: 0.75rem;
-            padding-bottom: 0.75rem;
-            font-weight: bold;
-            cursor: pointer;
+    > .i-post-body {
+        &.is-forced-read-more {
+            max-height: 100svh;
+        }
 
-            &:hover {
-                text-decoration: underline;
+        > .i-forced-read-more {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            display: flex;
+            flex-direction: column;
+            padding: 0 0.75rem;
+
+            &::before {
+                content: '';
+                display: block;
+                height: 2rem;
+                background: linear-gradient(to bottom, rgb(var(--post-body-bg) / 0), rgb(var(--post-body-bg)));
+            }
+
+            > .i-read-more {
+                padding-left: 0;
             }
         }
     }
@@ -2053,23 +2132,60 @@ body {
     }
 }
 
+.co-var-post-body-bg {
+    --post-body-bg: 255 255 255;
+}
+
 .co-post-collapser > .i-collapsed > .i-tags,
 .co-post-contents > .i-tags,
 .co-post-box > .i-transparent-share-tags > .i-tags {
-    padding: 0.75rem;
-    line-height: 1;
-    overflow-wrap: break-word;
-    overflow-y: hidden;
     color: rgb(104 102 100);
+    padding: 0.75rem;
 
-    > .i-tag {
-        display: inline-block;
+    .i-collapser {
         font-size: 0.875rem;
         line-height: 1.25rem;
+        overflow-wrap: break-word;
+        overflow-y: hidden;
+    }
+
+    .i-tag {
+        display: inline-block;
         margin-right: 0.5rem;
 
         &:hover {
             text-decoration: underline;
+        }
+    }
+
+    &.is-collapsed {
+        .i-collapser {
+            max-height: 3.75rem;
+            position: relative;
+        }
+
+        .i-see-all {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            padding-right: 0.5rem;
+            height: 1.25rem;
+            display: flex;
+
+            &::before {
+                content: '';
+                width: 1rem;
+                background: linear-gradient(to right, rgb(var(--post-body-bg) / 0), rgb(var(--post-body-bg)));
+            }
+
+            > button {
+                background: rgb(var(--post-body-bg));
+                font-weight: bold;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
         }
     }
 }
@@ -2681,6 +2797,10 @@ body {
         border-color: rgb(74 72 71);
     }
 
+    .co-var-post-body-bg {
+        --post-body-bg: 0 0 0;
+    }
+
     .co-post-collapser > .i-collapsed > .i-tags,
     .co-post-contents > .i-tags,
     .co-post-box > .i-transparent-share-tags > .i-tags {
@@ -2975,6 +3095,7 @@ body {
     width: 100%;
     height: 100%;
 }
+
 ::view-transition-new(attachment-lightbox-attachment) {
     animation: none;
 }
